# ChangeLog for catalyst
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  14 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py:
  Rewrite unpack() so it doesn't suck

  14 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic.py:
  Beef up autoresume to record path metadata and check it later

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/snapshot.py:
  Add --exclude /packages/ to the rsync line for the snapshot

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py, modules/catalyst/util.py:
  Create catalyst.util.move() helper and use it

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py, modules/catalyst/util.py:
  Add catalyst.util.copy() helper function and use it

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py, modules/catalyst/util.py:
  Create catalyst.util.mkdir() helper function and use it

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/netboot.py, modules/catalyst/util.py:
  Create catalyst.util.create_tarball() helper function
  Replace more manual calls to rsync with catalyst.util.rsync()
  Replace manual calls to 'tar cjf' with catalyst.util.create_tarball()

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/snapshot.py, modules/catalyst/util.py:
  Add catalyst.util.create_tarball() helper function and modify snapshot
  target to use it

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/snapshot.py, modules/catalyst/util.py:
  Create catalyst.util.rsync() helper function

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/livecd_stage1.py,